@@ -1,12 +1,15 @@
 package org.example.prime_numbers;
 
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashSet;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 /**
  * task: from interview<br>
- * time complexity: {@code O(N*log(N)*log(log(N)))}<br>
+ * time complexity: {@code O(N*log(log(N)))}<br>
  * space complexity: {@code O(N)}<br>
  * difficulty: {@code medium}
  */
@@ -14,21 +17,28 @@ public class PrimeNumberService {
 
     public Set<Integer> findPrimesUpTo(int N) {
         if (N < 2) {
-            return Set.of();
+            return Collections.emptySet();
         }
 
-        Set<Integer> numbers = IntStream.rangeClosed(2, N)
-                .boxed()
-                .collect(Collectors.toSet());
+        boolean[] isPrime = new boolean[N + 1];
+        Arrays.fill(isPrime, true);
+        isPrime[0] = isPrime[1] = false;
 
         for (int i = 2; i <= N; i++) {
-            if (numbers.contains(i)) {
-                for (int p = i * i; p <= N; p = p + i) {
-                    numbers.remove(p);
+            if (isPrime[i]) {
+                for (int j = i * i; j <= N; j += i) {
+                    isPrime[j] = false;
                 }
             }
         }
-        return numbers;
+
+        Set<Integer> primes = new HashSet<>();
+        for (int i = 2; i <= N; i++) {
+            if (isPrime[i]) {
+                primes.add(i);
+            }
+        }
+        return primes;
     }
 
 }
